--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -17,34 +17,25 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Source Environment Variables from env.sh
+      - name: Source Environment Variables
         run: |
           source .github/workflows/env.sh
           echo "S3_BUCKET=$S3_BUCKET" >> $GITHUB_ENV
           echo "AWS_REGION=$AWS_REGION" >> $GITHUB_ENV
         shell: bash
 
+      - name: Debug Environment Variables
+        run: |
+          echo "S3_BUCKET=${S3_BUCKET}"
+          echo "AWS_REGION=${AWS_REGION}"
+
       - name: Extract Project Name
-        run: |
-          PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
-          echo "PROJECT_NAME=${PROJECT_NAME}" >> $GITHUB_ENV
+        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
 
-      - name: Source Variables from terraform.tfvars
-        id: source_tfvars
+      - name: Delete API Endpoint from S3
         run: |
-          # Read variables from terraform.tfvars
-          export $(grep -v '^#' terraform.tfvars | xargs)
-
-          # Save the variables to GitHub environment
-          echo "LAMBDA_FUNCTION_NAME=${lambda_function_name}" >> $GITHUB_ENV
-          echo "API_GATEWAY_NAME=${api_gateway_name}" >> $GITHUB_ENV
-          echo "API_STAGE_NAME=${api_stage_name}" >> $GITHUB_ENV
-
-      - name: Debug Variables from terraform.tfvars
-        run: |
-          echo "Lambda Function Name: ${LAMBDA_FUNCTION_NAME}"
-          echo "API Gateway Name: ${API_GATEWAY_NAME}"
-          echo "API Stage Name: ${API_STAGE_NAME}"
+          aws s3 rm s3://${S3_BUCKET}/${PROJECT_NAME}/base_api_endpoint.txt
+        shell: bash
 
       - name: Initialize Terraform
         run: |
@@ -52,7 +43,7 @@ jobs:
             -backend-config="key=${PROJECT_NAME}/terraform.tfstate" \
             -backend-config="bucket=${S3_BUCKET}" \
             -backend-config="region=${AWS_REGION}"
-        shell: /usr/bin/bash -e {0}
+        working-directory: ./terraform
 
       - name: Destroy Terraform Resources
         run: terraform destroy -auto-approve
