--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -91,9 +91,9 @@ jobs:
 
       - name: Retrieve API Endpoint from S3
         run: |
-          aws s3 cp s3://${S3_BUCKET}/${PROJECT_NAME}/api_endpoint.txt .
-          if [ -f api_endpoint.txt ]; then
-            echo "API_ENDPOINT=$(cat api_endpoint.txt)" >> $GITHUB_ENV
+          aws s3 cp s3://${S3_BUCKET}/${PROJECT_NAME}/base_api_endpoint.txt .
+          if [ -f base_api_endpoint.txt ]; then
+            echo "API_ENDPOINT=$(cat base_api_endpoint.txt)" >> $GITHUB_ENV
           else
             echo "Error: API endpoint file not found" >&2
             exit 1
